docs/resources/containerization/resource-quota-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx1
  namespace: myns
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: 0.1m
        memory: 200M
      limits: 
        memory: 400M
        cpu: 0.2m
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
