docs/resources/containerization/tls-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: data
      mountPath: /etc/cert-data
    resources: {}
  volumes:
  - name: data
    secret:
      secretName: my-tls-secret
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
